syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/theme-ce/simple-shop/pb";

message User {
    string username = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string address = 5;
    google.protobuf.Timestamp password_changed_at = 6;
    google.protobuf.Timestamp created_at = 7;
    bool is_admin = 8;
}